# Lab32-task2

./: CMakeLists.txt  main.cpp
